methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:47: error: not found: value c
  if (getCouleurSol()==c){
                       ^